AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = \
$(top_srcdir)/Makefile.in \
$(top_srcdir)/aclocal.m4 \
$(top_srcdir)/compile \
$(top_srcdir)/config.guess \
$(top_srcdir)/config.h.in \
$(top_srcdir)/config.h.in~ \
$(top_srcdir)/config.sub \
$(top_srcdir)/configure \
$(top_srcdir)/install-sh \
$(top_srcdir)/ltmain.sh \
$(top_srcdir)/missing \
$(top_srcdir)/m4/ltsugar.m4 \
$(top_srcdir)/m4/libtool.m4 \
$(top_srcdir)/m4/ltversion.m4 \
$(top_srcdir)/m4/lt~obsolete.m4 \
$(top_srcdir)/m4/ltoptions.m4 \
autom4te.cache \
depcomp

EXTRA_DIST =

EXTRA_DIST += \
AUTHORS \
COPYING \
README.md \
autogen.sh

include src/lib/Makefile.mk
include src/bin/Makefile.mk
